fixing header alignment

--- a/public/css/ys.css
+++ b/public/css/ys.css
@@ -35,6 +35,9 @@ header {
 	background-color: #F15B3F;
 	overflow: auto;
 }
+.searchStuff {
+	float: left;
+}
 header h1 {
 	float: left;
 }
@@ -42,7 +45,7 @@ header ul {
 	float: right;
 	list-style-type: none;
 	padding: 0;
-	margin: 0;
+	margin: 20px 0 0 20px;
 }
 header li {
 	display: inline-block;
@@ -152,11 +155,6 @@ button, input {
 .main h1 {
 	margin: 15px 0 15px 30px;
 }
-.main ul {
-	margin-right: 30px;
-	margin-top: 33px;
-	float: right;
-}
 .main a {
 	color: #fff;
 }
@@ -167,8 +165,11 @@ button, input {
 	letter-spacing: 1px;
 	
 }
-.complaints span {display: block;}
+.complaints span {
+	display: block;
+}
 .tasks {
+	float: right;
 	margin-top: 10px;
 	margin-bottom: 35px;
 }
@@ -1014,17 +1015,8 @@ html body * dd.clear
   margin: 8px 50px 0 11px;
   font-size: 29px;
 }
-.main ul {
-  margin-right: 21px;
-  margin-top: 16px;
-  float: right;
-  color:#000;
-}
 header{
   background:transparent url(../img/logo_splash.png) no-repeat -21px -25px;
-}
-.main ul{
-  margin-top:11px;
 }
 .main li a {
   font-size:12px;
